--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <h1>Workshop #1: learuing GitHub sirin</h1>
     <center><p>Crearte by 66085170 sirin chanton</p></center>
 </body>
 </html>
